--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5092,6 +5092,19 @@ SPDX-License-Identifier: BSD-3-Clause-Clear -->
             </intent-filter>
         </receiver>
 
+ <!-- AospaPlusXtras -->
+        <activity android:name=".Settings$AospaPlusXtrasActivity"
+            android:label="@string/aospaplus_xtras_dash_title"
+            android:icon="@drawable/ic_settings_aospaplus"
+            android:exported="true"
+            android:parentActivityName="com.android.settings">
+            <intent-filter>
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="org.aospaplusos.xtras.AospaPlusXtras" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
